// Fitxer de definició proto per a les entitats del Mòdul RESMOD.
// createdAt: 24-10-06 dg 

syntax = "proto3";

package proto;

import "model_entity.proto";
import "resmod/res_resource.proto";
import "../resmod/b_definitions/dismod/dis_entities.proto";
import "../resmod/b_definitions/resmod/res_enumerations.proto";
import "../resmod/e_localization/locmod/loc_entities.proto";


option go_package = "./";

// Definició d'un recurs auxliar.enum
message RscResource {
  ModelEntity                          base_entity = 1;
  string                               name_key = 2;
  optional string                      desc_key = 3;
  int32                                version = 4;
  RscResource                          root_id = 5;
  string                               locale_code = 6;
  ResResourceType                      resource_type = 7;
  optional string                      inline_text = 8;
  optional string                      link = 9;
}
